# irrefutable

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md
src/: irrefutable.rs  lib.rs
tests/: test.rs
